--- a/public/index.html
+++ b/public/index.html
@@ -2296,7 +2296,7 @@
                 </div>
                 <div class="row text-center" data-anime='{ "translateY": [0, 0], "opacity": [0,1], "duration": 1200, "delay": 100, "staggervalue": 150, "easing": "easeOutQuad" }'>
                     <div class="col-12">
-                        <h4 class="alt-font text-dark-gray mb-0 ls-minus-1px fancy-text-style-4">World's hottest destinations for <span class="fw-600" data-fancy-text='{ "effect": "wave", "direction": "up", "speed": 10, "string": ["history lovers.", "nature lovers.", "joyful tours."], "duration": 2500 }'></span></h4>
+                        <h4 class="alt-font text-dark-gray mb-0 ls-minus-1px fancy-text-style-4">World's hottest destinations for <span class="fw-600" data-fancy-text='{ "effect": "wave", "direction": "up", "speed": 10, "string": ["history lovers.", "nature lovers.", "unforgettable tours."], "duration": 2500 }'></span></h4>
                     </div>
                 </div>
             </div>
@@ -2347,8 +2347,8 @@
             <div class="container">
                 <div class="row align-items-center justify-content-center" data-anime='{ "translateY": [0, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
                     <div class="col-lg-3 md-mb-20px text-center text-lg-start">
-                        <span class="fw-500 text-base-color text-uppercase">Testimonials</span>
-                        <h2 class="alt-font fw-600 text-dark-gray ls-minus-2px">Our happy traveller.</h2>
+                        <span class="fw-500 text-base-color text-uppercase">Reviews</span>
+                        <h2 class="alt-font fw-600 text-dark-gray ls-minus-2px">Our Happy Guest.</h2>
                         <div class="d-flex justify-content-center justify-content-lg-start">
                             <!-- start slider navigation -->
                             <div class="slider-one-slide-prev-1 bg-white box-shadow-double-large swiper-button-prev slider-navigation-style-04"><i class="bi bi-arrow-left-short icon-very-medium"></i></div>
@@ -2459,7 +2459,7 @@
                                 <div class="form-results border-radius-100px pt-10px pb-10px ps-15px pe-15px fs-16 mt-10px w-100 z-index-1 text-center position-absolute d-none"></div>
                             </form>
                         </div>
-                        <p class="fs-16 lh-normal">We are committed to protecting your <a href="#" class="text-decoration-line-bottom text-dark-gray text-dark-gray-hover">privacy policy.</a></p>
+                        
                     </div>
                 </div>
                 <!-- end subscribe item -->
