add tour-details gallery photos

--- a/public/tour-details.html
+++ b/public/tour-details.html
@@ -273,7 +273,7 @@
                                         <div class="gallery-box">
                                             <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
-                                                    <img src="https://via.placeholder.com/800x630" alt="" />
+                                                    <img src="images/tours/orange-bay-gallery-4.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
                                                         <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-white">
                                                             <i class="feather icon-feather-search text-dark-gray icon-small"></i>
@@ -289,7 +289,7 @@
                                         <div class="gallery-box">
                                             <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
-                                                    <img src="https://via.placeholder.com/800x630" alt="" />
+                                                    <img src="images/tours/orange-bay-gallery-5.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
                                                         <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-white">
                                                             <i class="feather icon-feather-search text-dark-gray icon-small"></i>
@@ -305,7 +305,7 @@
                                         <div class="gallery-box">
                                             <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
-                                                    <img src="https://via.placeholder.com/800x630" alt="" />
+                                                    <img src="images/tours/orange-bay-gallery-6.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
                                                         <div class="d-flex align-items-center justify-content-center w-50px h-50px rounded-circle bg-white">
                                                             <i class="feather icon-feather-search text-dark-gray icon-small"></i>
