fix photo gallery links in tour-details

--- a/public/tour-details.html
+++ b/public/tour-details.html
@@ -271,7 +271,7 @@
                                     <!-- start gallery item -->
                                     <li class="grid-item transition-inner-all">
                                         <div class="gallery-box">
-                                            <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
+                                            <a href="images/tours/orange-bay-gallery-4.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
                                                     <img src="images/tours/orange-bay-gallery-4.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
@@ -287,7 +287,7 @@
                                     <!-- start gallery item -->
                                     <li class="grid-item transition-inner-all">
                                         <div class="gallery-box">
-                                            <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
+                                            <a href="images/tours/orange-bay-gallery-5.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
                                                     <img src="images/tours/orange-bay-gallery-5.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
@@ -303,7 +303,7 @@
                                     <!-- start gallery item -->
                                     <li class="grid-item transition-inner-all">
                                         <div class="gallery-box">
-                                            <a href="https://via.placeholder.com/800x630" data-group="lightbox-gallery" title="Lightbox gallery image title">
+                                            <a href="images/tours/orange-bay-gallery-6.jpg" data-group="lightbox-gallery" title="Lightbox gallery image title">
                                                 <div class="position-relative gallery-image bg-dark-gray overflow-hidden">
                                                     <img src="images/tours/orange-bay-gallery-6.jpg" alt="" /><!--800*630-->
                                                     <div class="d-flex align-items-center justify-content-center position-absolute top-0px left-0px w-100 h-100 gallery-hover move-bottom-top">
