--- a/public/index.html
+++ b/public/index.html
@@ -1859,11 +1859,13 @@
             </article>
         </section>
         <!-- end section --> 
+         
         <!-- start section -->
         <section class="position-relative pb-0 xs-pt-30px">
             <div class="w-100 h-70px position-absolute top-minus-70px md-top-minus-50px left-0px" style="background-image:url('images/demo-travel-agency-slider-07.png');"></div>
         </section>
         <!-- end section -->
+
         <!-- start section -->
         <section class="extra-big-section background-position-center-bottom background-size-contain background-no-repeat position-relative pt-0" style="background-image:url('images/demo-travel-agency-home-bg-02.png');">
             <div class="position-absolute left-0px bottom-minus-50px d-none d-lg-inline-block" data-bottom-top="transform: translateY(-50px)" data-top-bottom="transform: translateY(50px)">
@@ -1951,6 +1953,8 @@
             </div>
         </section>
         <!-- end section -->
+
+        <!-- start section -->
         <section class="bg-very-light-gray background-position-center-bottom background-size-contain background-no-repeat pt-2 pb-6" style="background-image:url('images/demo-travel-agency-home-bg-05.png');">
             <div class="container"> 
                 <div class="row justify-content-center mb-3">
@@ -2160,6 +2164,8 @@
                 </div> 
             </div>
         </section>
+        <!-- end section -->
+
         <!-- start section -->
         <section class="pt-0">
             <div class="container">
@@ -2517,6 +2523,7 @@
             </div>
         </footer>
         <!-- end footer -->
+
         <!-- start scroll progress -->
         <div class="scroll-progress d-none d-xxl-block">
             <a href="#" class="scroll-top" aria-label="scroll">
@@ -2524,6 +2531,8 @@
             </a>
         </div>
         <!-- end scroll progress -->
+
+
         <!-- javascript libraries -->
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/vendors.min.js"></script>
